--- a/apps/shell/src/app/app.component.html
+++ b/apps/shell/src/app/app.component.html
@@ -1,1 +1,8 @@
-<mfe-poc-nx-welcome></mfe-poc-nx-welcome>
+<router-outlet name="menu"></router-outlet>
+<router-outlet></router-outlet>
+ <!-- Footer-->
+ <div class="container-sm">
+ <footer class="bg-dark">
+    <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+</footer>
+</div>
